--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <header> <h1>Egg Timer </h1> </header>
 
+    <main>
     <div class="container">
+
+        <div id="timerMenu">
         <div class="cardHeader">
             <h1>Hi ! Welcome to Egg Timer </h1>
             <p> Your little assistant for boiled eggs </p>
@@ -18,20 +21,49 @@
 
         <div class="card">
             <h1> What do you wanna do today ? </h1>
-            <div class="timerBtns">
             
-                <button type="button" id="soft"> Soft Boiled Eggs </button>
-                    <label for="soft"> 4 minutes </label>
-                <button type="button" id="medium"> Medium Boiled Eggs </button>
-                    <label for="medium"> 6 minutes </label>
-                <button type="button" id="hard"> Hard Boiled Eggs</button>
-                    <label for="hard"> 8 minutes </label>
-                <button type="button" id="extraHard"> Extra Hard Boiled Eggs</button>
-                    <label for="extraHard"> 12 minutes </label>
+            <div class="menuBtns">
+                <div>
+                    <img src="https://placehold.co/150?text=Soft+Boiled" />
+                    <button type="button" id="soft"> Soft Boiled Eggs </button>
+                        <label for="soft"> 4 minutes </label>
+                </div>
+                <div>
+                    <img src="https://placehold.co/150?text=Medium+Boiled" />
+                    <button type="button" id="medium"> Medium Boiled Eggs </button>
+                        <label for="medium"> 6 minutes </label>
+                </div>
+                <div>
+                    <img src="https://placehold.co/150?text=Hard+Boiled" />
+                    <button type="button" id="hard"> Hard Boiled Eggs</button>
+                        <label for="hard"> 8 minutes </label>
+                </div>
+                <div>
+                    <img src="https://placehold.co/150?text=Extra+Boiled" />
+                    <button type="button" id="extraHard"> Extra Hard Boiled Eggs</button>
+                        <label for="extraHard"> 12 minutes </label>
+                </div>
+            </div>
 
+        </div>
+        </div>
+    
+        <div id="timerScreen">
+            <div class="timer">
+
+                <h1> 00:00 </h1>
+
+            </div>
+            <div class="timerBtns">
+                <button type="button"> Start </button>
+                <button type="button"> Stop </button>
+                <button type="button"> Restart </button>
+                <button type="button"> Add 30 Sec </button>
             </div>
         </div>
 
     </div>
+    </main>
+
 </body>
 </html>
